[package]
name = "simple-socket"
version = "0.1.3"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "The basic socket server & client for testing"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/simple-socket"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

actor = ["podo-core-driver"]

[dependencies]
bincode = "1.2"
byteorder = "1.3"
podo-core-driver = { version = "0.4", default-features = false, features = ["util-message"], optional = true }
serde = "1.0"
socket2 = "0.3"

[dev-dependencies]
podo-core-driver = { version = "0.4", default-features = false, features = ["util"] }
serde = { version = "1", features = ["derive"] }
